# sshpass

./: .gitignore  ChangeLog  README.md  configure.ac  main.c  sshpass.1
sshpass/: .cvsignore  ChangeLog  Makefile.am  bootstrap  configure.ac  main.c  sshpass.1
